--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,9 @@
 	android:layout_height="match_parent"
 	tools:context="com.bonnetrouge.quasar.MainActivity">
 
-	<LinearLayout
+	<android.support.v4.view.ViewPager
+		android:id="@+id/view_pager"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical"/>
+		android:layout_height="match_parent" />
+
 </android.support.design.widget.CoordinatorLayout>
