--- a/app/src/main/res/layout/fragment_border.xml
+++ b/app/src/main/res/layout/fragment_border.xml
@@ -1,8 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/nice_purple">
+
+	<TextView
+		android:id="@+id/textView2"
+		android:layout_width="300dp"
+		android:layout_height="90dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="40dp"
+		android:fontFamily="cursive"
+		android:gravity="center"
+		android:text="@string/screen_border"
+		android:textColor="@color/nice_light_orange"
+		android:textSize="56sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
+
+	<TextView
+		android:id="@+id/fon"
+		android:layout_width="194dp"
+		android:layout_height="87dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:fontFamily="sans-serif-condensed"
+		android:gravity="center"
+		android:maxLines="2"
+		android:text="@string/screen_border_desc"
+		android:textColor="@android:color/white"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+
+	<Switch
+		android:id="@+id/switch1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="32dp"
+		android:fontFamily="sans-serif-condensed"
+		android:text="Enable: "
+		android:theme="@style/BorderFragTheme"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/fon"
+		app:layout_constraintVertical_bias="0.0"/>
 
 </android.support.constraint.ConstraintLayout>
