--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,8 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/nice_light_orange">
+
+	<TextView
+		android:id="@+id/textView2"
+		android:layout_width="300dp"
+		android:layout_height="90dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="40dp"
+		android:fontFamily="cursive"
+		android:gravity="center"
+		android:text="@string/screen_filter"
+		android:textColor="@color/nice_purple"
+		android:textSize="56sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
+
+	<TextView
+		android:id="@+id/fon"
+		android:layout_width="194dp"
+		android:layout_height="87dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:fontFamily="sans-serif-condensed"
+		android:gravity="center"
+		android:maxLines="2"
+		android:text="@string/screen_filter_desc"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+
+	<Switch
+		android:id="@+id/switch1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="32dp"
+		android:fontFamily="sans-serif-condensed"
+		android:theme="@style/FilterFragTheme"
+		android:text="Enable: "
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.501"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/fon"/>
+
+	<SeekBar
+		android:id="@+id/seekBar"
+		android:layout_width="274dp"
+		android:layout_height="20dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:foregroundGravity="center"
+		android:theme="@style/FilterFragTheme"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+
+	<TextView
+		android:id="@+id/textView4"
+		android:layout_width="194dp"
+		android:layout_height="33dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="48dp"
+		android:fontFamily="sans-serif-condensed"
+		android:gravity="center"
+		android:text="Choose Filter Intensity"
+		android:textSize="14sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/switch1"
+		/>
+
+	<RadioButton
+		android:id="@+id/radioButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="80dp"
+		android:layout_marginStart="40dp"
+		android:text="Red"
+		android:theme="@style/FilterFragTheme"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		/>
+
+	<RadioButton
+		android:id="@+id/radioButton2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="80dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:theme="@style/FilterFragTheme"
+		android:text="Blue"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/radioButton3"
+		app:layout_constraintHorizontal_bias="0.416"
+		app:layout_constraintStart_toEndOf="@+id/radioButton"/>
+
+	<RadioButton
+		android:id="@+id/radioButton3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="80dp"
+		android:layout_marginEnd="40dp"
+		android:text="Yellow"
+		android:theme="@style/FilterFragTheme"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		/>
 
 </android.support.constraint.ConstraintLayout>
