--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@color/nice_purple"
 	tools:context="com.bonnetrouge.quasar.MainActivity">
-
-	<android.support.v4.view.ViewPager
-		android:id="@+id/view_pager"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
