--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 	tools:context="com.bonnetrouge.quasar.MainActivity">
 
 	<android.support.v7.widget.CardView
-		android:id="@+id/cardView"
+		android:id="@+id/img_selection_view"
 		android:layout_width="200dp"
 		android:layout_height="300dp"
 		android:layout_gravity="center"
